--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ vignettes/*.pdf
 # /05-classcode_completed/
 # /05-classcode_completed/
 /02-assignments/assignment-04/answers/
+/02-assignments/assignment-05/answers/
