--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ vignettes/*.pdf
 # /05-classcode_completed/
 /02-assignments/assignment-04/answers/
 /02-assignments/assignment-05/answers/
+/02-assignments/assignment-06/answers/ 
