yield stability complete

--- a/.gitignore
+++ b/.gitignore
@@ -43,4 +43,5 @@ vignettes/*.pdf
 /02-assignments/assignment-04/answers/
 /02-assignments/assignment-05/answers/
 /02-assignments/assignment-06/answers/ 
+/02-assignments/assignment-07/answers/
 /07-quiz/quiz-04/answers/
